--- a/src/Board.css
+++ b/src/Board.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  align-items: center;
 }
 
 .board-row {
@@ -12,7 +13,7 @@
 .room {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  border: 2px solid #333;
 }
 
 .room-row {
@@ -22,20 +23,26 @@
 .cell {
   width: 20px;
   height: 20px;
+  border: 1px solid #999;
 }
 
-.cell.wall {
+.wall {
   background-color: #444;
 }
 
-.cell.path {
+.path {
   background-color: #ccc;
 }
 
-.cell.exit {
+.exit {
   background-color: green;
 }
 
-.cell.start {
+.start {
   background-color: blue;
+}
+
+.player {
+  background-color: red;
+  border-radius: 50%; /* speler zichtbaar als rondje */
 }
