--- a/src/Board.css
+++ b/src/Board.css
@@ -1,33 +1,42 @@
-body {
-  margin:0;
-  overflow:hidden;
-}
-
-.board-container {
-  position: relative;
-  width: 1200px;
-  height: 560px;
-  background-color: #222;
+.board {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 5px;
+  background-color: #333;
+  padding: 10px;
 }
 
 .tile {
-  position: absolute;
   display: grid;
   grid-template-rows: repeat(7, 20px);
   grid-template-columns: repeat(15, 20px);
+  border: 2px solid #555;
 }
 
-.tile.hidden {
-  opacity:0.2;
+.row {
+  display: contents;
 }
 
-.cell {
+.wall {
+  background-color: black;
   width: 20px;
   height: 20px;
-  box-sizing: border-box;
 }
 
-.cell.wall { background-color:#000; }
-.cell.path { background-color:#888; }
-.cell.player { background-color:#ff0; }
-.cell.exit { background-color:#0f0; }
+.path {
+  background-color: gray;
+  width: 20px;
+  height: 20px;
+}
+
+.exit {
+  background-color: green;
+  width: 20px;
+  height: 20px;
+}
+
+.player {
+  background-color: yellow;
+  width: 20px;
+  height: 20px;
+}
